# Parkify

./: .gitignore  entry.py  exit.py  parking_lot.npy  pyproject.toml
.streamlit/: config.toml
core/: __init__.py  parking.py
db/: parking.db
models/: notebook.ipynb
tests/: test_entry_app.py
